--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,5 @@ log = "0.4"
 
 [dependencies.pyo3]
 version = "0.27"
-features = ["experimental-async", "extension-module"]
+features = ["experimental-async", "extension-module", "experimental-inspect"]
 optional = true
